--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,14 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
+ 
   - title: "Portfolio"
     url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
     
+ - title: "Publications"
+    url: /publications/
+        
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
+  - title: "Places I've Been"
     url: /markdown/
